Creación del modulo ProductEdit

--- a/ProductListViper/ProductListViper/ProductEdit/View/ProductEditView.xib
+++ b/ProductListViper/ProductListViper/ProductEdit/View/ProductEditView.xib
@@ -41,7 +41,7 @@
                                     <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="b7E-Xb-jpM">
+                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="b7E-Xb-jpM">
                                     <rect key="frame" x="0.0" y="34" width="361" height="128"/>
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
@@ -83,10 +83,6 @@
                             </subviews>
                         </stackView>
                     </subviews>
-                    <constraints>
-                        <constraint firstAttribute="trailing" secondItem="iLA-T6-ean" secondAttribute="trailing" constant="16" id="T34-8C-upF"/>
-                        <constraint firstItem="iLA-T6-ean" firstAttribute="leading" secondItem="sZK-Ec-wcA" secondAttribute="leading" constant="16" id="Ulp-eM-OD8"/>
-                    </constraints>
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
