--- a/ProductListViper/ProductListViper/ProductEdit/View/ProductEditView.xib
+++ b/ProductListViper/ProductListViper/ProductEdit/View/ProductEditView.xib
@@ -11,10 +11,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProductEditView" customModule="ProductListViper" customModuleProvider="target">
             <connections>
-                <outlet property="prodcutName" destination="m9g-a0-vaY" id="FtV-m6-znD"/>
-                <outlet property="productCategoryMenu" destination="EWk-wf-fxV" id="p0x-Lg-VR7"/>
-                <outlet property="productDescription" destination="b7E-Xb-jpM" id="jfm-w5-Cul"/>
+                <outlet property="productDescription" destination="3FL-fd-c0s" id="Rcz-A3-7D3"/>
                 <outlet property="productImage" destination="iLA-T6-ean" id="8Iv-7R-ubx"/>
+                <outlet property="productName" destination="m9g-a0-vaY" id="y0J-La-gnt"/>
                 <outlet property="productPrice" destination="27A-5H-srD" id="N60-0O-0rq"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -25,7 +24,7 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="sZK-Ec-wcA">
-                    <rect key="frame" x="16" y="75" width="361" height="446"/>
+                    <rect key="frame" x="16" y="75" width="361" height="478"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iLA-T6-ean">
                             <rect key="frame" x="0.0" y="0.0" width="361" height="250"/>
@@ -34,36 +33,57 @@
                             </constraints>
                         </imageView>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="vWh-HF-j3d">
-                            <rect key="frame" x="0.0" y="250" width="361" height="196"/>
+                            <rect key="frame" x="0.0" y="250" width="361" height="228"/>
                             <subviews>
-                                <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="m9g-a0-vaY">
+                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="fsS-p3-jva">
                                     <rect key="frame" x="0.0" y="0.0" width="361" height="34"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                                    <textInputTraits key="textInputTraits"/>
-                                </textField>
-                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="b7E-Xb-jpM">
-                                    <rect key="frame" x="0.0" y="34" width="361" height="128"/>
-                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="128" id="eMp-gX-cUX"/>
-                                    </constraints>
-                                    <color key="textColor" systemColor="labelColor"/>
-                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                    <userDefinedRuntimeAttributes>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="lastLineFillPercent">
-                                            <integer key="value" value="0"/>
-                                        </userDefinedRuntimeAttribute>
-                                        <userDefinedRuntimeAttribute type="number" keyPath="linesCornerRadius">
-                                            <integer key="value" value="0"/>
-                                        </userDefinedRuntimeAttribute>
-                                    </userDefinedRuntimeAttributes>
-                                </textView>
-                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="H2R-if-H3L">
-                                    <rect key="frame" x="0.0" y="162" width="361" height="34"/>
                                     <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jJu-80-KCy">
+                                            <rect key="frame" x="0.0" y="0.0" width="70.333333333333329" height="34"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="m9g-a0-vaY">
+                                            <rect key="frame" x="78.333333333333343" y="0.0" width="282.66666666666663" height="34"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                    </subviews>
+                                </stackView>
+                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="DYv-nO-B80">
+                                    <rect key="frame" x="0.0" y="34" width="361" height="128"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descripción: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hl9-yJ-zwb">
+                                            <rect key="frame" x="0.0" y="0.0" width="99.666666666666671" height="128"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="3FL-fd-c0s">
+                                            <rect key="frame" x="107.66666666666667" y="0.0" width="253.33333333333331" height="128"/>
+                                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                            <color key="textColor" systemColor="labelColor"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                        </textView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="hl9-yJ-zwb" firstAttribute="top" secondItem="DYv-nO-B80" secondAttribute="top" id="5vD-26-vau"/>
+                                    </constraints>
+                                </stackView>
+                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ttv-HT-HVA">
+                                    <rect key="frame" x="0.0" y="162" width="361" height="32"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categoria: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cEJ-qB-2Tz">
+                                            <rect key="frame" x="0.0" y="0.0" width="83" height="32"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                         <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="EWk-wf-fxV">
-                                            <rect key="frame" x="0.0" y="0.0" width="180.66666666666666" height="34"/>
+                                            <rect key="frame" x="91" y="0.0" width="270" height="32"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <menu key="menu" id="F1U-bB-Ne0">
                                                 <children>
@@ -73,8 +93,19 @@
                                             </menu>
                                             <state key="normal" title="Button"/>
                                         </button>
+                                    </subviews>
+                                </stackView>
+                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="H2R-if-H3L">
+                                    <rect key="frame" x="0.0" y="194" width="361" height="34"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Precio: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9th-Ky-k8C">
+                                            <rect key="frame" x="0.0" y="0.0" width="210" height="34"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                         <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="27A-5H-srD">
-                                            <rect key="frame" x="180.66666666666663" y="0.0" width="180.33333333333337" height="34"/>
+                                            <rect key="frame" x="218" y="0.0" width="143" height="34"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                             <textInputTraits key="textInputTraits"/>
                                         </textField>
@@ -84,12 +115,25 @@
                         </stackView>
                     </subviews>
                 </stackView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y0t-J7-idk">
+                    <rect key="frame" x="148.66666666666666" y="569" width="96" height="36"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="36" id="IaZ-Tk-Yhi"/>
+                        <constraint firstAttribute="width" constant="96" id="enX-Tn-GSg"/>
+                    </constraints>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="filled" title="Guardar">
+                        <color key="baseBackgroundColor" systemColor="systemGray2Color"/>
+                    </buttonConfiguration>
+                </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
+                <constraint firstItem="Y0t-J7-idk" firstAttribute="top" secondItem="sZK-Ec-wcA" secondAttribute="bottom" constant="16" id="5hP-YC-fbT"/>
                 <constraint firstItem="sZK-Ec-wcA" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="H7Q-Yb-cyl"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="sZK-Ec-wcA" secondAttribute="trailing" constant="16" id="SX4-w3-8Py"/>
+                <constraint firstItem="Y0t-J7-idk" firstAttribute="centerX" secondItem="sZK-Ec-wcA" secondAttribute="centerX" id="Yhv-hz-nke"/>
                 <constraint firstItem="sZK-Ec-wcA" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="16" id="j6y-V8-POC"/>
             </constraints>
             <point key="canvasLocation" x="6.8702290076335872" y="19.718309859154932"/>
@@ -101,6 +145,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
