--- a/ProductListViper/ProductListViper/NewProduct/View/NewProductView.xib
+++ b/ProductListViper/ProductListViper/NewProduct/View/NewProductView.xib
@@ -5,11 +5,16 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="UIMenu" message="Requires Xcode 11 or later." minToolsVersion="11.0" requiredIntegratedClassName="UICommandDiff"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="NewProductView" customModule="ProductListViper" customModuleProvider="target">
             <connections>
+                <outlet property="categoryMenuButton" destination="ByD-ye-LTD" id="UbZ-FU-meI"/>
+                <outlet property="productDescription" destination="2k0-2X-LpN" id="Rl8-Ml-LCy"/>
+                <outlet property="productName" destination="qK0-PP-7Lp" id="EM3-f5-tS9"/>
+                <outlet property="productPrice" destination="gaU-3w-r6N" id="Ph7-Vb-a15"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -17,12 +22,127 @@
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="Gbm-mQ-mnY">
+                    <rect key="frame" x="16" y="59" width="361" height="388"/>
+                    <subviews>
+                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qNS-AD-r4A">
+                            <rect key="frame" x="0.0" y="0.0" width="361" height="250"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="250" id="UoT-Tc-1oN"/>
+                            </constraints>
+                        </imageView>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="1ld-hH-SyE">
+                            <rect key="frame" x="0.0" y="254" width="361" height="134"/>
+                            <subviews>
+                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="BVo-hH-2m2">
+                                    <rect key="frame" x="0.0" y="0.0" width="361" height="34"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xyP-5X-JtE">
+                                            <rect key="frame" x="0.0" y="0.0" width="70.333333333333329" height="34"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="qK0-PP-7Lp">
+                                            <rect key="frame" x="78.333333333333343" y="0.0" width="282.66666666666663" height="34"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                    </subviews>
+                                </stackView>
+                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4Y3-gX-64w">
+                                    <rect key="frame" x="0.0" y="34" width="361" height="34"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descripción: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OcR-Rx-FgI">
+                                            <rect key="frame" x="0.0" y="0.0" width="99.666666666666671" height="34"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2k0-2X-LpN">
+                                            <rect key="frame" x="107.66666666666667" y="0.0" width="253.33333333333331" height="34"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="OcR-Rx-FgI" firstAttribute="top" secondItem="4Y3-gX-64w" secondAttribute="top" id="JPI-do-Na1"/>
+                                    </constraints>
+                                </stackView>
+                                <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="H5U-4Y-t8H">
+                                    <rect key="frame" x="0.0" y="68" width="361" height="32"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categoria: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aw3-kX-DN6">
+                                            <rect key="frame" x="0.0" y="0.0" width="83" height="32"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ByD-ye-LTD">
+                                            <rect key="frame" x="91" y="0.0" width="270" height="32"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <menu key="menu" title="Categoria" id="cli-W4-clo">
+                                                <children>
+                                                    <command id="3S9-bI-Wgp"/>
+                                                    <command title="Item 2" id="Bxa-2G-M4j"/>
+                                                </children>
+                                            </menu>
+                                            <state key="normal" title="Categoria"/>
+                                        </button>
+                                    </subviews>
+                                </stackView>
+                                <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="4Tu-Us-tgT">
+                                    <rect key="frame" x="0.0" y="100" width="361" height="34"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Precio: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="k7g-dd-kfB">
+                                            <rect key="frame" x="0.0" y="0.0" width="210" height="34"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="gaU-3w-r6N">
+                                            <rect key="frame" x="218" y="0.0" width="143" height="34"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                            <textInputTraits key="textInputTraits"/>
+                                        </textField>
+                                    </subviews>
+                                </stackView>
+                            </subviews>
+                        </stackView>
+                    </subviews>
+                </stackView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gDQ-1p-87J">
+                    <rect key="frame" x="148.66666666666666" y="463" width="96" height="36"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="96" id="Re0-Bc-qjk"/>
+                        <constraint firstAttribute="height" constant="36" id="wPG-lx-wWj"/>
+                    </constraints>
+                    <state key="normal" title="Button"/>
+                    <buttonConfiguration key="configuration" style="filled" title="Guardar">
+                        <color key="baseBackgroundColor" systemColor="systemGray2Color"/>
+                    </buttonConfiguration>
+                    <connections>
+                        <action selector="onTapSave:" destination="-1" eventType="touchUpInside" id="caU-5B-ela"/>
+                    </connections>
+                </button>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemGray2Color"/>
+            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <constraints>
+                <constraint firstItem="gDQ-1p-87J" firstAttribute="top" secondItem="Gbm-mQ-mnY" secondAttribute="bottom" constant="16" id="0Hs-of-kJP"/>
+                <constraint firstItem="Gbm-mQ-mnY" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="16" id="Arf-Xu-jrK"/>
+                <constraint firstItem="gDQ-1p-87J" firstAttribute="centerX" secondItem="Gbm-mQ-mnY" secondAttribute="centerX" id="CFN-Jb-vVv"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Gbm-mQ-mnY" secondAttribute="trailing" constant="16" id="pyp-Ph-FGZ"/>
+                <constraint firstItem="Gbm-mQ-mnY" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="qug-Ur-UKh"/>
+            </constraints>
             <point key="canvasLocation" x="109" y="-12"/>
         </view>
     </objects>
     <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
