--- a/ProductListViper/ProductListViper/ProductEdit/View/ProductEditView.xib
+++ b/ProductListViper/ProductListViper/ProductEdit/View/ProductEditView.xib
@@ -24,8 +24,8 @@
             <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="sZK-Ec-wcA">
-                    <rect key="frame" x="16" y="75" width="361" height="478"/>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="sZK-Ec-wcA">
+                    <rect key="frame" x="16" y="75" width="361" height="498"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iLA-T6-ean">
                             <rect key="frame" x="0.0" y="0.0" width="361" height="250"/>
@@ -33,8 +33,8 @@
                                 <constraint firstAttribute="height" constant="250" id="FgJ-cg-OHZ"/>
                             </constraints>
                         </imageView>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="vWh-HF-j3d">
-                            <rect key="frame" x="0.0" y="250" width="361" height="228"/>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="vWh-HF-j3d">
+                            <rect key="frame" x="0.0" y="255" width="361" height="243"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="fsS-p3-jva">
                                     <rect key="frame" x="0.0" y="0.0" width="361" height="34"/>
@@ -53,7 +53,7 @@
                                     </subviews>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="DYv-nO-B80">
-                                    <rect key="frame" x="0.0" y="34" width="361" height="128"/>
+                                    <rect key="frame" x="0.0" y="39" width="361" height="128"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descripción: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hl9-yJ-zwb">
                                             <rect key="frame" x="0.0" y="0.0" width="99.666666666666671" height="128"/>
@@ -61,13 +61,15 @@
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="3FL-fd-c0s">
+                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" textAlignment="justified" translatesAutoresizingMaskIntoConstraints="NO" id="3FL-fd-c0s">
                                             <rect key="frame" x="107.66666666666667" y="0.0" width="253.33333333333331" height="128"/>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                             <color key="textColor" systemColor="labelColor"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="boolean" keyPath="useFontLineHeight" value="NO"/>
+                                            </userDefinedRuntimeAttributes>
                                         </textView>
                                     </subviews>
                                     <constraints>
@@ -75,7 +77,7 @@
                                     </constraints>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="ttv-HT-HVA">
-                                    <rect key="frame" x="0.0" y="162" width="361" height="32"/>
+                                    <rect key="frame" x="0.0" y="172" width="361" height="32"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categoria: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cEJ-qB-2Tz">
                                             <rect key="frame" x="0.0" y="0.0" width="83" height="32"/>
@@ -97,7 +99,7 @@
                                     </subviews>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="H2R-if-H3L">
-                                    <rect key="frame" x="0.0" y="194" width="361" height="34"/>
+                                    <rect key="frame" x="0.0" y="209" width="361" height="34"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Precio: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9th-Ky-k8C">
                                             <rect key="frame" x="0.0" y="0.0" width="210" height="34"/>
@@ -117,7 +119,7 @@
                     </subviews>
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Y0t-J7-idk">
-                    <rect key="frame" x="148.66666666666666" y="569" width="96" height="36"/>
+                    <rect key="frame" x="148.66666666666666" y="589" width="96" height="36"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="36" id="IaZ-Tk-Yhi"/>
                         <constraint firstAttribute="width" constant="96" id="enX-Tn-GSg"/>
@@ -126,6 +128,9 @@
                     <buttonConfiguration key="configuration" style="filled" title="Guardar">
                         <color key="baseBackgroundColor" systemColor="systemGray2Color"/>
                     </buttonConfiguration>
+                    <connections>
+                        <action selector="onTapSave:" destination="-1" eventType="touchUpInside" id="PS1-TV-9yp"/>
+                    </connections>
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
